--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "node": "^22"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^133.0.0",
     "chrome-aws-lambda": "^6",
-    "express": "^4.18.1",
-    "puppeteer-core": "^6"
+    "express": "^4.21.2",
+    "puppeteer-core": "^6.0.0"
   },
   "devDependencies": {
     "puppeteer": "^16.2.0"
