--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api",
-      "dest": "/index.js"
+      "dest": "/api/index.js"
     },
     {
       "src": "/",
-      "dest": "/index.js"
+      "dest": "/api/index.js"
     }
   ],
   "functions": {
-    "index.js": {
+    "api/index.js": {
       "memory": 1024,
       "maxDuration": 30
     }
